<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/distance_small"
    android:paddingTop="@dimen/distance_medium"
    android:paddingRight="@dimen/distance_small"
    android:paddingBottom="@dimen/distance_small">

    <ImageView
        android:id="@+id/icon"
        android:scaleType="fitCenter"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/distance_large"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/icon_new"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:backgroundTint="@color/my_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_large"
        android:layout_marginEnd="@dimen/distance_large"
        android:layout_marginStart="@dimen/distance_large"
        android:ellipsize="end"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <EditText
        android:layout_marginTop="@dimen/distance_small"
        android:id="@+id/fieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_large"
        android:layout_marginEnd="@dimen/distance_large"
        android:ellipsize="end"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/fieldEmail"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

    <CheckBox
        android:id="@+id/chbSignUpAsTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Als Trainer registrieren"
        app:layout_constraintTop_toBottomOf="@id/fieldPassword"
        app:layout_constraintEnd_toEndOf="@id/fieldPassword"
        android:layout_marginEnd="@dimen/distance_large"
        >
    </CheckBox>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_large"
        android:layout_marginEnd="@dimen/distance_medium"
        android:layout_marginTop="@dimen/distance_medium"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbSignUpAsTrainer"
        app:layout_constraintEnd_toStartOf="@id/buttonSignUp"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/distance_large"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSignIn"
        app:layout_constraintTop_toTopOf="@+id/buttonSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>