<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateTrainingActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/pfeil"
        android:scaleY="0.5"
        android:scaleX="0.5"
        android:layout_marginStart="@dimen/distance_small"
        android:layout_marginTop="@dimen/distance_xs"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_training"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_small"
        android:layout_marginStart="@dimen/distance_large" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvwEditTraining"
        android:layout_width="0dp"
        android:layout_height="720dp"
        android:layout_marginStart="@dimen/distance_medium"
        android:layout_marginEnd="@dimen/distance_medium"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="@dimen/distance_medium"
        app:cardElevation="@dimen/distance_xs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/my_light_primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_small"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            >

            <TextView
                android:id="@+id/txvTrainingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/font_size_normal"
                android:layout_marginTop="@dimen/distance_small"/>

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txvTrainingTitle"/>

            <TextView
                android:id="@+id/txvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_location"
                app:layout_constraintTop_toBottomOf="@id/edtTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/font_size_normal"
                android:layout_marginTop="@dimen/distance_medium"/>

            <EditText
                android:id="@+id/edtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txvLocation"/>

            <TextView
                android:id="@+id/txvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_date"
                app:layout_constraintTop_toBottomOf="@id/edtLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/font_size_normal"
                android:layout_marginTop="@dimen/distance_medium"/>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="@dimen/picker_width"
                android:layout_height="@dimen/picker_height"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintTop_toBottomOf="@id/txvDate"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="-30dp"
                />


            <TextView
                android:id="@+id/txvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_time_start"
                app:layout_constraintTop_toBottomOf="@id/datePicker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/font_size_normal"
                android:layout_marginTop="@dimen/distance_small"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="@dimen/picker_width"
                android:layout_height="@dimen/picker_height"
                android:timePickerMode="spinner"
                app:layout_constraintTop_toBottomOf="@id/txvTime"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="-90dp"
                />

            <TextView
                android:id="@+id/txvDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_duration"
                app:layout_constraintTop_toBottomOf="@id/timePicker"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/font_size_normal"
                android:layout_marginTop="@dimen/distance_small"/>

            <EditText
                android:id="@+id/edtDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txvDuration"
                android:inputType="number"
                />


            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edtDuration"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/create_save"
                android:layout_marginTop="@dimen/distance_small"
                android:backgroundTint="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>